--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@typescript-eslint/parser": "^6.9.1",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "next": "14.0.0",
     "react": "^18",
