--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,6 @@
   "extends": "next/core-web-vitals",
   "plugins": ["unused-imports", "imports", "simple-import-sort"],
   "rules": {
-    "no-unused-vars": "off",
     "unused-imports/no-unused-imports": "error",
     "unused-imports/no-unused-vars": [
       "warn",
@@ -14,7 +13,20 @@
       }
     ],
     "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error"
+    "simple-import-sort/exports": "error",
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"],
+    "no-unused-vars": [
+      "error",
+      {
+        "args": "after-used",
+        "caughtErrors": "none",
+        "ignoreRestSiblings": true,
+        "vars": "all"
+      }
+    ],
+    "prefer-const": "error",
+    "react-hooks/exhaustive-deps": "error"
   },
 
   "settings": {
