--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "next": "14.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.2.0",
