--- a/package.json
+++ b/package.json
@@ -1,68 +1,73 @@
 {
-  "name": "app-burger-builder",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install",
-    "commit": "git-cz"
-  },
-  "lint-staged": {
-    "*.{js,ts,jsx,tsx}": [
-      "eslint --fix",
-      "eslint",
-      "prettier --write"
-    ],
-    "*.json": [
-      "prettier --write"
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+    "name": "app-burger-builder",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "prepare": "husky install",
+        "commit": "git-cz"
+    },
+    "lint-staged": {
+        "*.{js,ts,jsx,tsx}": [
+            "eslint --fix",
+            "eslint",
+            "prettier --write"
+        ],
+        "*.json": [
+            "prettier --write"
+        ]
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    },
+    "dependencies": {
+        "@formatjs/intl-localematcher": "^0.4.2",
+        "@hookform/resolvers": "^3.3.2",
+        "@typescript-eslint/parser": "^6.9.1",
+        "accept-language": "^3.0.18",
+        "accept-language-parser": "^1.5.0",
+        "clsx": "^2.0.0",
+        "eslint-import-resolver-typescript": "^3.6.1",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
+        "eslint-plugin-unused-imports": "^3.0.0",
+        "i18next": "^23.6.0",
+        "i18next-resources-to-backend": "^1.1.4",
+        "negotiator": "^0.6.3",
+        "next": "14.0.0",
+        "next-i18next": "^15.0.0",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-hook-form": "^7.49.0",
+        "react-i18next": "^13.3.1",
+        "react-icons": "^4.11.0",
+        "react-svg": "^15.1.10",
+        "yup": "^1.3.2"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^18.2.0",
+        "@commitlint/config-conventional": "^18.1.0",
+        "@types/accept-language-parser": "^1.5.6",
+        "@types/negotiator": "^0.6.2",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "autoprefixer": "^10",
+        "commitizen": "^4.3.0",
+        "cz-conventional-changelog": "^3.3.0",
+        "eslint": "^8.52.0",
+        "eslint-config-next": "14.0.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.1",
+        "husky": "^8.0.0",
+        "lint-staged": "^15.0.2",
+        "postcss": "^8",
+        "prettier": "^3.0.3",
+        "tailwindcss": "^3",
+        "typescript": "^5"
     }
-  },
-  "dependencies": {
-    "@formatjs/intl-localematcher": "^0.4.2",
-    "@typescript-eslint/parser": "^6.9.1",
-    "accept-language": "^3.0.18",
-    "accept-language-parser": "^1.5.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "i18next": "^23.6.0",
-    "i18next-resources-to-backend": "^1.1.4",
-    "negotiator": "^0.6.3",
-    "next": "14.0.0",
-    "next-i18next": "^15.0.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-i18next": "^13.3.1",
-    "react-icons": "^4.11.0"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^18.2.0",
-    "@commitlint/config-conventional": "^18.1.0",
-    "@types/accept-language-parser": "^1.5.6",
-    "@types/negotiator": "^0.6.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "commitizen": "^4.3.0",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.52.0",
-    "eslint-config-next": "14.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "husky": "^8.0.0",
-    "lint-staged": "^15.0.2",
-    "postcss": "^8",
-    "prettier": "^3.0.3",
-    "tailwindcss": "^3",
-    "typescript": "^5"
-  }
 }
