--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@formatjs/intl-localematcher": "^0.4.2",
         "@hookform/resolvers": "^3.3.2",
+        "@reduxjs/toolkit": "^2.0.1",
         "@typescript-eslint/parser": "^6.9.1",
         "accept-language": "^3.0.18",
         "accept-language-parser": "^1.5.0",
@@ -37,6 +38,7 @@
         "eslint-plugin-unused-imports": "^3.0.0",
         "i18next": "^23.6.0",
         "i18next-resources-to-backend": "^1.1.4",
+        "lucide-react": "^0.298.0",
         "negotiator": "^0.6.3",
         "next": "14.0.0",
         "next-i18next": "^15.0.0",
@@ -45,7 +47,10 @@
         "react-hook-form": "^7.49.0",
         "react-i18next": "^13.3.1",
         "react-icons": "^4.11.0",
+        "react-redux": "^9.0.4",
         "react-svg": "^15.1.10",
+        "redux": "^5.0.0",
+        "redux-persist": "^6.0.0",
         "yup": "^1.3.2"
     },
     "devDependencies": {
