--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "negotiator": "^0.6.3",
         "next": "14.0.0",
         "next-i18next": "^15.0.0",
+        "prisma": "^5.7.1",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.49.0",
