--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
     "dependencies": {
         "@formatjs/intl-localematcher": "^0.4.2",
         "@hookform/resolvers": "^3.3.2",
+        "@next-auth/prisma-adapter": "^1.0.7",
+        "@prisma/client": "^5.7.1",
         "@reduxjs/toolkit": "^2.0.1",
         "@typescript-eslint/parser": "^6.9.1",
         "accept-language": "^3.0.18",
         "accept-language-parser": "^1.5.0",
+        "axios": "^1.6.5",
+        "bcrypt": "^5.1.1",
         "clsx": "^2.0.0",
         "eslint-import-resolver-typescript": "^3.6.1",
         "eslint-plugin-simple-import-sort": "^10.0.0",
@@ -41,11 +45,13 @@
         "lucide-react": "^0.298.0",
         "negotiator": "^0.6.3",
         "next": "14.0.0",
+        "next-auth": "^4.24.5",
         "next-i18next": "^15.0.0",
         "prisma": "^5.7.1",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.49.0",
+        "react-hot-toast": "^2.4.1",
         "react-i18next": "^13.3.1",
         "react-icons": "^4.11.0",
         "react-redux": "^9.0.4",
@@ -58,6 +64,7 @@
         "@commitlint/cli": "^18.2.0",
         "@commitlint/config-conventional": "^18.1.0",
         "@types/accept-language-parser": "^1.5.6",
+        "@types/bcrypt": "^5.0.2",
         "@types/negotiator": "^0.6.2",
         "@types/node": "^20",
         "@types/react": "^18",
