--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "@formatjs/intl-localematcher": "^0.4.2",
+        "@headlessui/react": "^1.7.18",
         "@hookform/resolvers": "^3.3.2",
         "@next-auth/prisma-adapter": "^1.0.7",
         "@prisma/client": "^5.7.1",
