--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@prisma/client": "^5.7.1",
         "@reduxjs/toolkit": "^2.0.1",
         "@typescript-eslint/parser": "^6.9.1",
+        "@vercel/analytics": "^1.2.2",
         "accept-language": "^3.0.18",
         "accept-language-parser": "^1.5.0",
         "axios": "^1.6.5",
