--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@reduxjs/toolkit": "^2.0.1",
         "@typescript-eslint/parser": "^6.9.1",
         "@vercel/analytics": "^1.2.2",
+        "@vercel/speed-insights": "^1.0.10",
         "accept-language": "^3.0.18",
         "accept-language-parser": "^1.5.0",
         "axios": "^1.6.5",
