--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
         "@next-auth/prisma-adapter": "^1.0.7",
         "@prisma/client": "^5.7.1",
         "@reduxjs/toolkit": "^2.0.1",
+        "@stripe/react-stripe-js": "^2.6.0",
+        "@stripe/stripe-js": "^3.0.8",
         "@typescript-eslint/parser": "^6.9.1",
         "@vercel/analytics": "^1.2.2",
         "@vercel/speed-insights": "^1.0.10",
         "accept-language": "^3.0.18",
         "accept-language-parser": "^1.5.0",
-        "axios": "^1.6.5",
+        "axios": "^1.6.7",
         "bcrypt": "^5.1.1",
         "clsx": "^2.0.0",
         "eslint-import-resolver-typescript": "^3.6.1",
