--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "@heroicons/react": "^2.1.1",
         "@hookform/resolvers": "^3.3.2",
         "@next-auth/prisma-adapter": "^1.0.7",
-        "@prisma/client": "^5.7.1",
+        "@prisma/client": "^5.11.0",
         "@reduxjs/toolkit": "^2.0.1",
         "@stripe/react-stripe-js": "^2.6.0",
         "@stripe/stripe-js": "^3.0.8",
@@ -67,6 +67,7 @@
         "react-svg": "^15.1.10",
         "redux": "^5.0.0",
         "redux-persist": "^6.0.0",
+        "stripe": "^14.21.0",
         "yup": "^1.3.2"
     },
     "devDependencies": {
