--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@heroicons/react": "^2.1.1",
         "@hookform/resolvers": "^3.3.2",
         "@next-auth/prisma-adapter": "^1.0.7",
+        "@next/third-parties": "^14.2.3",
         "@prisma/client": "^5.11.0",
         "@reduxjs/toolkit": "^2.0.1",
         "@stripe/react-stripe-js": "^2.6.0",
@@ -55,6 +56,7 @@
         "next": "14.0.0",
         "next-auth": "^4.24.5",
         "next-i18next": "^15.0.0",
+        "next-intl": "^3.9.5",
         "next-sitemap": "^4.2.3",
         "prisma": "^5.7.1",
         "react": "^18",
