fix(lint): fixed lint config
fixed lint config

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dev": "next dev",
         "start": "next start",
         "lint": "next lint",
+        "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
         "prepare": "husky install",
         "commit": "git-cz",
         "postinstall": "prisma generate",
@@ -47,6 +48,7 @@
         "bcrypt": "^5.1.1",
         "clsx": "^2.0.0",
         "eslint-import-resolver-typescript": "^3.6.1",
+        "eslint-plugin-import": "^2.30.0",
         "eslint-plugin-simple-import-sort": "^10.0.0",
         "eslint-plugin-unused-imports": "^3.0.0",
         "i18next": "^23.6.0",
