--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "axios": "^1.6.7",
         "bcrypt": "^5.1.1",
         "clsx": "^2.0.0",
+        "dayjs": "^1.11.13",
         "eslint-import-resolver-typescript": "^3.6.1",
         "eslint-plugin-import": "^2.30.0",
         "eslint-plugin-simple-import-sort": "^10.0.0",
