--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "eslint-plugin-unused-imports": "^3.0.0",
         "i18next": "^23.6.0",
         "i18next-resources-to-backend": "^1.1.4",
+        "install": "^0.13.0",
         "lucide-react": "^0.298.0",
         "negotiator": "^0.6.3",
         "next": "14.0.0",
@@ -61,6 +62,7 @@
         "next-i18next": "^15.0.0",
         "next-intl": "^3.9.5",
         "next-sitemap": "^4.2.3",
+        "npm": "^10.8.3",
         "prisma": "^5.7.1",
         "react": "^18",
         "react-dom": "^18",
@@ -73,6 +75,7 @@
         "redux": "^5.0.0",
         "redux-persist": "^6.0.0",
         "stripe": "^14.21.0",
+        "swr": "^2.2.5",
         "yup": "^1.3.2"
     },
     "devDependencies": {
